<resources>
    <string name="app_name">Oráculo</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="txtnome">Digite seu primeiro nome</string>
    <string name="txtsigno">Qual seu signo</string>
    <string name="btgerarsorte">Gerar Sorte</string>
    <string name="voltar">Voltar</string>
    <string name="sobreoraculo">Sobre Oráculo</string>
    <string name="txtsobre">O Oráculo e uma aplicativo de codigo aberto desenvolvido pela turma de Programação de Jogo Digitais da Faculdade Ipiranga <br></br></string>
    <string name="criadores">Criadores</string>
    <string name="anderson">Anderson Coimbra</string>
    <string name="kim">Kim Peniche</string>
    <string name="renato">Renato Benicio</string>
    <string name="jully">Fanny Modesto</string>
    <string name="face">Facebook</string>
    <string name="linkedin">Linkedin</string>
    <string name="twitter">Twitter</string>
    <string name="git">GitHub</string>
</resources>
