<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center|top"
    android:weightSum="1"
    android:id="@+id/listviewsobre">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/sobreoraculo"
        android:id="@+id/textView2"
        />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="308dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            android:text="@string/txtsobre" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/criadores"
        android:id="@+id/textView4" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:paddingTop="10dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="196dp">

                    <ImageView
                        android:layout_width="127dp"
                        android:layout_height="160dp"
                        android:id="@+id/imageView"
                        android:src="@mipmap/andersoncoimbra" />

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:id="@+id/textView5"
                            android:text="@string/anderson" />

                        <Button
                            style="?android:attr/buttonStyleSmall"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/face"
                            android:id="@+id/btface1"
                            android:autoLink="all"/>

                        <Button
                            style="?android:attr/buttonStyleSmall"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/twitter"
                            android:id="@+id/bttwitter1"
                            android:layout_gravity="center_horizontal" />

                        <Button
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/git"
                            android:id="@+id/btgit1"
                            android:layout_gravity="center_horizontal" />
                    </LinearLayout>

                </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="196dp"
                android:id="@+id/linear3">

                <ImageView
                    android:layout_width="127dp"
                    android:layout_height="160dp"
                    android:id="@+id/imageView2"
                    android:src="@mipmap/kimpeniche" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:id="@+id/textView6"
                        android:text="@string/kim" />

                    <Button
                        style="?android:attr/buttonStyleSmall"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/face"
                        android:id="@+id/btface2" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="196dp">

                <ImageView
                    android:layout_width="127dp"
                    android:layout_height="160dp"
                    android:id="@+id/imageView3"
                    android:src="@mipmap/renato" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                    <Button
                        style="?android:attr/buttonStyleSmall"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/face"
                        android:id="@+id/btface3" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                    <Button
                        style="?android:attr/buttonStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="New Button"
                        android:id="@+id/button" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</LinearLayout>
