<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".OraculoActivity"
    android:orientation="vertical"
    android:weightSum="1">

    <TextView
        android:text="@string/txtnome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:textColor="#ffffffff" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/ednome"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="0dp"
        android:selectAllOnFocus="true"
        android:shadowColor="#ffffffff"
        android:textColor="#ff000000"
        android:singleLine="true"
        android:background="#92ffffff" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtsigno"
        android:textSize="12dp"
        android:textColor="#ffffffff" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spsignos"
        android:theme="@style/Base.Widget.AppCompat.DropDownItem.Spinner"
        android:touchscreenBlocksFocus="false"
        android:background="#5bffffff" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btgerarsorte"
        android:id="@+id/btgerarsorte"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/hsorte"
        android:layout_gravity="center_horizontal"
        android:autoText="false"
        android:textColor="#ff150fff"
        android:background="#63ffffff" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/txtfrase"
        android:layout_gravity="center_horizontal"
        android:textColor="#ffff2720" />

    <LinearLayout
        android:id="@+id/ads"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.56"></LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sobre Oráculo"
        android:id="@+id/btsobre"
        android:layout_gravity="center_horizontal"
        android:focusable="true" />


</LinearLayout>

